--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">calculate-university-lesson-average-app</string>
+    <string name="calculate_btn">Hesapla</string>
 </resources>
